--- a/apps/www/content/docs/components/select.mdx
+++ b/apps/www/content/docs/components/select.mdx
@@ -88,3 +88,39 @@ import {
 ### Form
 
 <ComponentPreview name="select-form" />
+
+## Changelog
+
+### 2025-04-07 Fixed `asChild` API
+
+Wrapped `children` with `<Slottable>` to ensures proper props forwarding and compatibility.
+
+<Steps>
+
+<Step>Install the following dependencies:</Step>
+
+```bash
+npm install @radix-ui/react-slot
+```
+
+<Step>Import the `<Slottable>` component in your `select.tsx` file</Step>
+
+```diff showLineNumbers{3} title="select.tsx"
+  import * as React from "react"
+  import * as SelectPrimitive from "@radix-ui/react-select"
++ import { Slottable } from "@radix-ui/react-slot"
+```
+
+<Step>
+  Wrap the `children` prop with `<Slottable>` in the `<SelectTrigger>` component:
+</Step>
+
+```diff showLineNumbers{43} title="select.tsx"
+      {...props}
+    >
+-     {children}
++     <Slottable>{children}</Slottable>
+      <SelectPrimitive.Icon asChild>
+```
+
+</Steps>
