fix: export toast fn from sonner component

--- a/apps/www/content/docs/components/sonner.mdx
+++ b/apps/www/content/docs/components/sonner.mdx
@@ -93,7 +93,7 @@ export default function RootLayout({ children }) {
 ## Usage
 
 ```tsx
-import { toast } from "sonner"
+import { toast } from "@/components/ui/sonner"
 ```
 
 ```tsx
