fix tanstack start command

--- a/apps/www/content/docs/installation/tanstack.mdx
+++ b/apps/www/content/docs/installation/tanstack.mdx
@@ -44,7 +44,7 @@ Create an `app.css` file in the `app/styles` directory and import `tailwindcss`
 ```tsx title="app/routes/__root.tsx" showLineNumbers {5,21-26} showLineNumbers
 import type { ReactNode } from "react"
 import { Outlet, createRootRoute } from "@tanstack/react-router"
-import { Meta, Scripts } from "@tanstack/start"
+import { Meta, Scripts } from "@tanstack/react-start"
 
 import appCss from "@/styles/app.css?url"
 
