Added docs to set up background scaling for Drawer component

--- a/apps/www/content/docs/components/drawer.mdx
+++ b/apps/www/content/docs/components/drawer.mdx
@@ -83,6 +83,16 @@ import {
 </Drawer>
 ```
 
+### Background Scaling
+
+You can get the background to zoom and scale when the drawer is open by adding the `data-vaul-drawer-wrapper=""` attribute to the root component of your application.
+
+```tsx showLineNumbers
+<div id="app" data-vaul-drawer-wrapper="">
+  {children}
+</div>
+```
+
 ## Examples
 
 ### Responsive Dialog
