--- a/apps/v4/docs/installation/next.mdx
+++ b/apps/v4/docs/installation/next.mdx
@@ -25,7 +25,7 @@ npx shadcn@latest add button
 
 The command above will add the `Button` component to your project. You can then import it like this:
 
-```tsx {1,6} showLineNumbers
+```tsx {1,6} showLineNumbers title="app/page.tsx"
 import { Button } from "@/components/ui/button"
 
 export default function Home() {
