--- a/apps/v4/docs/installation/remix.mdx
+++ b/apps/v4/docs/installation/remix.mdx
@@ -3,7 +3,7 @@ title: Remix
 description: Install and configure shadcn/ui for Remix.
 ---
 
-<Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
+<Callout className="mb-6 border-blue-600 bg-blue-50 dark:border-blue-900 dark:bg-blue-950 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
   **Note:** The following guide is for Tailwind v4. If you are using Tailwind
   v3, use `shadcn@2.3.0`.
 </Callout>
@@ -74,7 +74,7 @@ export default {
 
 And finally we add the following to our `remix.config.js` file:
 
-```js {4-5}
+```js {4-5} showLineNumbers title="remix.config.js"
 /** @type {import('@remix-run/dev').AppConfig} */
 export default {
   ...
@@ -88,7 +88,7 @@ export default {
 
 In your `app/root.tsx` file, import the `tailwind.css` file:
 
-```js {1, 4}
+```js {1, 4} showLineNumbers title="app/root.tsx"
 import styles from "./tailwind.css?url"
 
 export const links: LinksFunction = () => [
@@ -107,7 +107,7 @@ npx shadcn@latest add button
 
 The command above will add the `Button` component to your project. You can then import it like this:
 
-```tsx {1,6} showLineNumbers
+```tsx {1,6} showLineNumbers title="app/routes/index.tsx"
 import { Button } from "~/components/ui/button"
 
 export default function Home() {
