removed unused code

--- a/apps/www/content/docs/dark-mode/tanstack.mdx
+++ b/apps/www/content/docs/dark-mode/tanstack.mdx
@@ -39,7 +39,7 @@ export const setThemeServerFn = createServerFn({ method: "POST" })
 ```tsx title="components/theme-provider.tsx"
 import { setThemeServerFn } from "@/lib/theme";
 import { useRouter } from "@tanstack/react-router";
-import { createContext, PropsWithChildren, use, useState } from "react";
+import { createContext, PropsWithChildren, use } from "react";
 
 export type Theme = "light" | "dark";
 
@@ -49,20 +49,14 @@ type Props = PropsWithChildren<{ theme: Theme }>;
 const ThemeContext = createContext<ThemeContextVal | null>(null);
 
 export function ThemeProvider({ children, theme }: Props) {
-  const [_theme, _setTheme] = useState(theme);
   const router = useRouter();
 
   function setTheme(val: Theme) {
     setThemeServerFn({ data: val });
-    _setTheme(val);
     router.invalidate();
   }
 
-  return (
-    <ThemeContext value={{ theme, setTheme }}>
-      {children}
-    </ThemeContext>
-  );
+  return <ThemeContext value={{ theme, setTheme }}>{children}</ThemeContext>;
 }
 
 export function useTheme() {
