fix(toast-docs): use correct extension for use-toast.ts

--- a/apps/www/content/docs/components/toast.mdx
+++ b/apps/www/content/docs/components/toast.mdx
@@ -69,7 +69,7 @@ npm install @radix-ui/react-toast
 
 <ComponentSource name="toast" fileName="toaster" />
 
-`use-toast.tsx`
+`use-toast.ts`
 
 <ComponentSource name="toast" fileName="use-toast" />
 
