fix|doc: force install latest tailwind with vite
`npx` (`pnpm dlx`, specifically) might install an older version of tailwind, sometimes. This is to force install the latest version of tailwind

--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -21,7 +21,7 @@ npm create vite@latest
 ### Add Tailwind CSS
 
 ```bash
-npm install tailwindcss @tailwindcss/vite
+npm install tailwindcss@latest @tailwindcss/vite
 ```
 
 Replace everything in `src/index.css` with the following:
