--- a/apps/v4/docs/(root)/components-json.mdx
+++ b/apps/v4/docs/(root)/components-json.mdx
@@ -7,10 +7,9 @@ The `components.json` file holds configuration for your project.
 
 We use it to understand how your project is set up and how to generate components customized for your project.
 
-<Callout className="mt-6">
-  Note: The `components.json` file is optional and **only required if you're
-  using the CLI** to add components to your project. If you're using the copy
-  and paste method, you don't need this file.
+<Callout className="mt-6" title="Note: The `components.json` file is optional">
+  It is **only required if you're using the CLI** to add components to your
+  project. If you're using the copy and paste method, you don't need this file.
 </Callout>
 
 You can create a `components.json` file in your project by running the following command:
