--- a/apps/v4/docs/installation/manual.mdx
+++ b/apps/v4/docs/installation/manual.mdx
@@ -40,6 +40,8 @@ The `@` alias is a preference. You can use other aliases if you want.
 
 Add the following to your styles/globals.css file. You can learn more about using CSS variables for theming in the [theming section](/docs/theming).
 
+<CodeCollapsibleWrapper>
+
 ```css showLineNumbers title="src/styles/globals.css"
 @import "tailwindcss";
 @import "tw-animate-css";
@@ -165,6 +167,8 @@ Add the following to your styles/globals.css file. You can learn more about usin
   }
 }
 ```
+
+</CodeCollapsibleWrapper>
 
 ### Add a cn helper
 
