--- a/apps/v4/docs/registry/open-in-v0.mdx
+++ b/apps/v4/docs/registry/open-in-v0.mdx
@@ -18,7 +18,7 @@ See [Build your Open in v0 button](https://v0.dev/chat/button) for more informat
 
 Here's a simple example of how to add a `Open in v0` button to your site.
 
-```jsx
+```jsx showLineNumbers
 import { Button } from "@/components/ui/button"
 
 export function OpenInV0Button({ url }: { url: string }) {
