--- a/apps/v4/docs/(root)/figma.mdx
+++ b/apps/v4/docs/(root)/figma.mdx
@@ -3,6 +3,11 @@ title: Figma
 description: Every component recreated in Figma. With customizable props, typography and icons.
 ---
 
+<Callout>
+  **Note:** The Figma files are contributed by the community. If you have any
+  questions or feedback, please reach out to the Figma file maintainers.
+</Callout>
+
 ## Paid
 
 - [shadcn/ui kit](https://shadcndesign.com) by [ Matt Wierzbicki](https://x.com/matsugfx) - A premium, always up-to-date UI kit for Figma - shadcn/ui compatible and optimized for smooth design-to-dev handoff.
