--- a/apps/v4/docs/installation/laravel.mdx
+++ b/apps/v4/docs/installation/laravel.mdx
@@ -3,11 +3,6 @@ title: Laravel
 description: Install and configure shadcn/ui for Laravel
 ---
 
-<Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
-</Callout>
-
 <Steps>
 
 ### Create project
@@ -28,7 +23,7 @@ npx shadcn@latest add switch
 
 The command above will add the `Switch` component to `resources/js/components/ui/switch.tsx`. You can then import it like this:
 
-```tsx {1,6} showLineNumbers
+```tsx title="resources/js/pages/index.tsx" {1,6} showLineNumbers
 import { Switch } from "@/components/ui/switch"
 
 const MyPage = () => {
