--- a/apps/v4/docs/installation/vite.mdx
+++ b/apps/v4/docs/installation/vite.mdx
@@ -3,11 +3,6 @@ title: Vite
 description: Install and configure shadcn/ui for Vite.
 ---
 
-<Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
-</Callout>
-
 <Steps>
 
 ### Create project
@@ -36,7 +31,7 @@ The current version of Vite splits TypeScript configuration into three files, tw
 Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the `tsconfig.json` and
 `tsconfig.app.json` files:
 
-```ts {11-16} showLineNumbers
+```ts title="tsconfig.json" {11-16} showLineNumbers
 {
   "files": [],
   "references": [
@@ -60,7 +55,7 @@ Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the
 
 Add the following code to the `tsconfig.app.json` file to resolve paths, for your IDE:
 
-```ts {4-9} showLineNumbers
+```ts title="tsconfig.app.json" {4-9} showLineNumbers
 {
   "compilerOptions": {
     // ...
@@ -129,7 +124,7 @@ import { Button } from "@/components/ui/button"
 
 function App() {
   return (
-    <div className="flex flex-col items-center justify-center min-h-svh">
+    <div className="flex min-h-svh flex-col items-center justify-center">
       <Button>Click me</Button>
     </div>
   )
