--- a/apps/www/content/docs/components/navigation-menu.mdx
+++ b/apps/www/content/docs/components/navigation-menu.mdx
@@ -87,11 +87,11 @@ import { navigationMenuTriggerStyle } from "@/components/ui/navigation-menu"
 
 ```tsx {3-5}
 <NavigationMenuItem>
-  <Link href="/docs" legacyBehavior passHref>
-    <NavigationMenuLink className={navigationMenuTriggerStyle()}>
+  <NavigationMenuLink asChild className={navigationMenuTriggerStyle()}>
+    <Link href="/docs">
       Documentation
-    </NavigationMenuLink>
-  </Link>
+    </Link>
+  </NavigationMenuLink>
 </NavigationMenuItem>
 ```
 
