fix: code style

--- a/apps/v4/docs/components/card.mdx
+++ b/apps/v4/docs/components/card.mdx
@@ -86,7 +86,7 @@ const CardTitle = React.forwardRef<
 >(({ className, ...props }, ref) => (
   <div
     ref={ref}
-    className={cn("font-semibold leading-none tracking-tight", className)}
+    className={cn("leading-none font-semibold tracking-tight", className)}
     {...props}
   />
 ))
