--- a/apps/v4/docs/components/dropdown-menu.mdx
+++ b/apps/v4/docs/components/dropdown-menu.mdx
@@ -131,7 +131,7 @@ Add the following classes to the `cva` call in your `dropdown-menu.tsx` file.
 <DropdownMenuPrimitive.SubTrigger
   ref={ref}
   className={cn(
-    "focus:bg-accent data-[state=open]:bg-accent flex cursor-default select-none items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-none [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0",
+    "focus:bg-accent data-[state=open]:bg-accent flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-none select-none [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0",
     inset && "pl-8",
     className
   )}
