--- a/apps/v4/docs/installation/react-router.mdx
+++ b/apps/v4/docs/installation/react-router.mdx
@@ -43,7 +43,7 @@ export function meta({}: Route.MetaArgs) {
 
 export default function Home() {
   return (
-    <div className="flex flex-col items-center justify-center min-h-svh">
+    <div className="flex min-h-svh flex-col items-center justify-center">
       <Button>Click me</Button>
     </div>
   )
