--- a/apps/v4/docs/registry/registry-item-json.mdx
+++ b/apps/v4/docs/registry/registry-item-json.mdx
@@ -36,7 +36,7 @@ The `registry-item.json` schema is used to define your custom registry items.
 }
 ```
 
-<div className="flex gap-2 items-center mt-6">
+<div className="mt-6 flex items-center gap-2">
   <Link href="/docs/registry/examples">See more examples</Link>
 </div>
 
