--- a/apps/v4/docs/installation/tanstack.mdx
+++ b/apps/v4/docs/installation/tanstack.mdx
@@ -43,7 +43,7 @@ Create an `app.css` file in the `app/styles` directory and import `tailwindcss`
 
 ```tsx title="app/routes/__root.tsx" showLineNumbers {5,21-26} showLineNumbers
 import type { ReactNode } from "react"
-import { Outlet, createRootRoute } from "@tanstack/react-router"
+import { createRootRoute, Outlet } from "@tanstack/react-router"
 import { Meta, Scripts } from "@tanstack/start"
 
 import appCss from "@/styles/app.css?url"
