docs: include --skip-registry-deps flag

--- a/apps/www/content/docs/cli.mdx
+++ b/apps/www/content/docs/cli.mdx
@@ -55,17 +55,18 @@ Arguments:
   components         the components to add or a url to the component.
 
 Options:
-  -y, --yes           skip confirmation prompt. (default: false)
-  -o, --overwrite     overwrite existing files. (default: false)
-  -c, --cwd <cwd>     the working directory. defaults to the current directory. (default: "/Users/shadcn/Desktop")
-  -a, --all           add all available components (default: false)
-  -p, --path <path>   the path to add the component to.
-  -s, --silent        mute output. (default: false)
-  --src-dir           use the src directory when creating a new project. (default: false)
-  --no-src-dir        do not use the src directory when creating a new project.
-  --css-variables     use css variables for theming. (default: true)
-  --no-css-variables  do not use css variables for theming.
-  -h, --help          display help for command
+  -y, --yes             skip confirmation prompt. (default: false)
+  -o, --overwrite       overwrite existing files. (default: false)
+  -c, --cwd <cwd>       the working directory. defaults to the current directory. (default: "/Users/shadcn/Desktop")
+  -a, --all             add all available components (default: false)
+  -p, --path <path>     the path to add the component to.
+  -s, --silent          mute output. (default: false)
+  --src-dir             use the src directory when creating a new project. (default: false)
+  --no-src-dir          do not use the src directory when creating a new project.
+  --skip-registry-deps  do not install dependencies from registry. (default: false)
+  --css-variables       use css variables for theming. (default: true)
+  --no-css-variables    do not use css variables for theming.
+  -h, --help            display help for command
 ```
 
 ## build
