--- a/apps/www/content/docs/registry/registry-item-json.mdx
+++ b/apps/www/content/docs/registry/registry-item-json.mdx
@@ -143,6 +143,7 @@ Used for registry dependencies. Can be names or URLs. Use the name of the item t
 
 - For `shadcn/ui` registry items such as `button`, `input`, `select`, etc use the name eg. `['button', 'input', 'select']`.
 - For custom registry items use the URL of the registry item eg. `['https://example.com/r/hello-world.json']`.
+- Using the `--skip-registry-deps` flag will skip the installation of these dependencies.
 
 ```json title="registry-item.json" showLineNumbers
 {
