feat: update examples

--- a/apps/v4/content/docs/components/accordion.mdx
+++ b/apps/v4/content/docs/components/accordion.mdx
@@ -9,7 +9,7 @@ links:
 
 <ComponentPreview
   name="accordion-demo"
-  className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
+  className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[80%] **:[.preview]:min-h-[400px]"
   description="An accordion with three items"
 />
 
