--- a/apps/v4/content/docs/components/chart.mdx
+++ b/apps/v4/content/docs/components/chart.mdx
@@ -6,7 +6,7 @@ component: true
 
 <ComponentPreview
   name="chart-bar-interactive"
-  className="-mt-4 [&_.preview]:p-0 [&_.preview]:lg:min-h-[404px] [&_.preview>div]:w-full [&_.preview>div]:border-none [&_.preview>div]:shadow-none"
+  className="theme-blue -mt-4 [&_.preview]:p-0 [&_.preview]:lg:min-h-[404px] [&_.preview>div]:w-full [&_.preview>div]:border-none [&_.preview>div]:shadow-none"
   hideCode
 />
 
