--- a/apps/v4/content/docs/components/alert.mdx
+++ b/apps/v4/content/docs/components/alert.mdx
@@ -49,29 +49,11 @@ import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert"
 ```
 
 ```tsx showLineNumbers
-<Alert>
-  <Terminal className="h-4 w-4" />
+<Alert variant="default | destructive">
+  <Terminal />
   <AlertTitle>Heads up!</AlertTitle>
   <AlertDescription>
     You can add components and dependencies to your app using the cli.
   </AlertDescription>
 </Alert>
 ```
-
-## Examples
-
-### Default
-
-<ComponentPreview
-  name="alert-demo"
-  title="An alert with an icon, title and description."
-  description="An alert with an icon, title and description. The title says 'Heads up!' and the description is 'You can add components to your app using the cli.'."
-/>
-
-### Destructive
-
-<ComponentPreview
-  name="alert-destructive"
-  title="An alert with a destructive variant."
-  description="An alert with a destructive variant. The title says 'Delete this item?' and the description is 'This action cannot be undone.'."
-/>
