--- a/apps/v4/content/docs/components/breadcrumb.mdx
+++ b/apps/v4/content/docs/components/breadcrumb.mdx
@@ -85,7 +85,7 @@ Use a custom component as `children` for `<BreadcrumbSeparator />` to create a c
 />
 
 ```tsx showLineNumbers {1,10-12}
-import { Slash } from "lucide-react"
+import { SlashIcon } from "lucide-react"
 
 ...
 
@@ -95,7 +95,7 @@ import { Slash } from "lucide-react"
       <BreadcrumbLink href="/">Home</BreadcrumbLink>
     </BreadcrumbItem>
     <BreadcrumbSeparator>
-      <Slash />
+      <SlashIcon />
     </BreadcrumbSeparator>
     <BreadcrumbItem>
       <BreadcrumbLink href="/components">Components</BreadcrumbLink>
