--- a/apps/v4/content/docs/(root)/blocks.mdx
+++ b/apps/v4/content/docs/(root)/blocks.mdx
@@ -158,7 +158,7 @@ Once the build script is finished, you can view your block at `http://localhost:
   width="1432"
   height="960"
   alt="Block preview"
-  className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+  className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
 />
 <Image
   src="/images/block-preview-dark.png"
