--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -58,7 +58,7 @@ Enable Lift Mode to automatically "lift" smaller components from a block templat
     width="1432"
     height="1050"
     alt="Lift Mode"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/lift-mode-dark.png"
@@ -86,7 +86,7 @@ One of the most requested features since launch has been layouts: admin dashboar
     width="716"
     height="430"
     alt="Admin dashboard"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/dashboard-1-dark.jpg"
@@ -112,7 +112,7 @@ Blocks are open source. You can find the source on GitHub. Use them in your proj
     width="716"
     height="420"
     alt="AI Playground"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/dashboard-2-dark.jpg"
@@ -134,7 +134,7 @@ We're also introducing a "Request a Block" feature. If there's a specific block 
     width="716"
     height="420"
     alt="Settings Page"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/dashboard-3-dark.jpg"
@@ -688,7 +688,7 @@ const SheetContent = React.forwardRef<
       {...props}
     >
       {children}
-      <SheetPrimitive.Close className="ring-offset-background focus:ring-ring data-[state=open]:bg-secondary absolute top-4 right-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:ring-2 focus:ring-offset-2 focus:outline-none disabled:pointer-events-none">
+      <SheetPrimitive.Close className="ring-offset-background focus:ring-ring data-[state=open]:bg-secondary absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:pointer-events-none">
         <X className="h-4 w-4" />
         <span className="sr-only">Close</span>
       </SheetPrimitive.Close>
