--- a/apps/v4/content/docs/(root)/v0.mdx
+++ b/apps/v4/content/docs/(root)/v0.mdx
@@ -11,7 +11,7 @@ Every component on ui.shadcn.com is editable on [v0 by Vercel](https://v0.dev). 
     width="716"
     height="420"
     alt="Open in v0"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/open-in-v0-dark.png"
