--- a/apps/v4/content/docs/components/button.mdx
+++ b/apps/v4/content/docs/components/button.mdx
@@ -47,11 +47,11 @@ npm install @radix-ui/react-slot
 
 ## Usage
 
-```tsx showLineNumbers
+```tsx
 import { Button } from "@/components/ui/button"
 ```
 
-```tsx showLineNumbers
+```tsx
 <Button variant="outline">Button</Button>
 ```
 
