--- a/apps/v4/content/docs/registry/index.mdx
+++ b/apps/v4/content/docs/registry/index.mdx
@@ -17,7 +17,7 @@ You can use the `shadcn` CLI to run your own component registry. Running your ow
     width="1432"
     height="960"
     alt="Registry"
-    className="mt-6 w-full overflow-hidden rounded-lg border shadow-sm dark:hidden"
+    className="mt-6 w-full overflow-hidden rounded-lg border dark:hidden"
   />
   <Image
     src="/images/registry-dark.png"
