--- a/apps/v4/content/docs/dark-mode/remix.mdx
+++ b/apps/v4/content/docs/dark-mode/remix.mdx
@@ -5,18 +5,18 @@ description: Adding dark mode to your remix app.
 
 <Steps>
 
-### Modify your tailwind.css file
+## Modify your tailwind.css file
 
 Add `:root[class~="dark"]` to your tailwind.css file. This will allow you to use the `dark` class on your html element to apply dark mode styles.
 
-```css {2} title="app/tailwind.css"
+```css {2} title="app/tailwind.css" showLineNumbers
 .dark,
 :root[class~="dark"] {
   ...;
 }
 ```
 
-### Install remix-themes
+## Install remix-themes
 
 Start by installing `remix-themes`:
 
@@ -24,9 +24,9 @@ Start by installing `remix-themes`:
 npm install remix-themes
 ```
 
-### Create a session storage and theme session resolver
+## Create a session storage and theme session resolver
 
-```tsx title="app/sessions.server.tsx"
+```tsx title="app/sessions.server.tsx" showLineNumbers
 import { createThemeSessionResolver } from "remix-themes"
 
 // You can default to 'development' if process.env.NODE_ENV is not set
@@ -49,11 +49,11 @@ const sessionStorage = createCookieSessionStorage({
 export const themeSessionResolver = createThemeSessionResolver(sessionStorage)
 ```
 
-### Set up Remix Themes
+## Set up Remix Themes
 
 Add the `ThemeProvider` to your root layout.
 
-```tsx {1-3,6-11,15-22,25-26,28,33} title="app/root.tsx"
+```tsx {1-3,6-11,15-22,25-26,28,33} title="app/root.tsx" showLineNumbers
 import clsx from "clsx"
 import { PreventFlashOnWrongTheme, ThemeProvider, useTheme } from "remix-themes"
 
@@ -101,11 +101,11 @@ export function App() {
 }
 ```
 
-### Add an action route
+## Add an action route
 
 Create a file in `/routes/action.set-theme.ts`. Ensure that you pass the filename to the ThemeProvider component. This route it's used to store the preferred theme in the session storage when the user changes it.
 
-```tsx title="app/routes/action.set-theme.ts"
+```tsx title="app/routes/action.set-theme.ts" showLineNumbers
 import { createThemeAction } from "remix-themes"
 
 import { themeSessionResolver } from "./sessions.server"
@@ -113,11 +113,11 @@ import { themeSessionResolver } from "./sessions.server"
 export const action = createThemeAction(themeSessionResolver)
 ```
 
-### Add a mode toggle
+## Add a mode toggle
 
 Place a mode toggle on your site to toggle between light and dark mode.
 
-```tsx title="components/mode-toggle.tsx"
+```tsx title="components/mode-toggle.tsx" showLineNumbers
 import { Moon, Sun } from "lucide-react"
 import { Theme, useTheme } from "remix-themes"
 
